updated identity service and added gateway

--- a/src/IdentityService/Pages/Account/Login/Index.cshtml
+++ b/src/IdentityService/Pages/Account/Login/Index.cshtml
@@ -13,10 +13,10 @@
 
         @if (Model.View.EnableLocalLogin)
         {
-            <div class="col-sm-6">
+            <div class="col-6 offset-3">
                 <div class="card">
                     <div class="card-header">
-                        <h2>Local Account</h2>
+                        <h2>Login</h2>
                     </div>
 
                     <div class="card-body">
@@ -44,6 +44,9 @@
                                 </div>
                             }
 
+                            <a class="pb-2 d-block" asp-page="../Register/Index" asp-route-returnUrl="@Model.Input.ReturnUrl">
+                                Register
+                            </a>
                             <button class="btn btn-primary" name="Input.Button" value="login">Login</button>
                             <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
                         </form>
